--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="under-accounts">
                     <div class="under-accounts-singin">
-                        <a href="otherhtml/signin.html"><button id="underaccbtn">Sign in</button></a>
+                        <a href="/otherhtml/signin.html"><button id="underaccbtn">Sign in</button></a>
                         <p>New customer? <a href="">Start here</a></p>
                     </div>
                     <hr>
@@ -220,24 +220,24 @@
       <div class="image-select-container">
          <div class="image-select">
                 <h2>Gaming accessories</h2>
-                <div class="image-nested-image">
-                    <div class="image-nested1">
+                <div class="image-nested-imagea">
+                    <div class="image-nesteda">
                         <img src="image1.jpg">
-                        <p>Headsets</p>
+                        <p class="margin1">Headsets</p>
                     </div>
-                    <div class="image-nested2">
+                    <div class="image-nestedb">
                         <img  src="image1.1.jpg"  >
-                        <p>Keyboard</p> 
+                        <p class="margin1">Keyboard</p> 
                     </div>
-                    <div class="image-nested1">
+                    <div class="image-nesteda">
                         <img src="image1.2.jpg" >
-                        <p>Computer mice</p>
+                        <p class="margin1">Computer mice</p>
+                        <p id="see-more">See more</p>
                     </div>
-                    <div class="image-nested2">
+                    <div class="image-nestedb">
                         <img src="image1.3.jpg" >
-                        <p>Chairs</p>
+                        <p class="margin1">Chairs</p>
                     </div>
-                    <p id="see-more">See more</p>
                 </div>
            </div>
          <div class="image-select">
@@ -252,24 +252,24 @@
          </div>
          <div class="image-select">
                     <h2>Refresh your space</h2>
-                    <div class="image-nested-image">
-                        <div class="image-nested1">
+                    <div class="image-nested-imagea">
+                        <div class="image-nesteda">
                              <img src="image3.jpg">
-                             <p>Dining</p>
+                             <p class="margin1">Dining</p>
                         </div>
-                        <div class="image-nested2">
+                        <div class="image-nestedb">
                              <img src="image3.1.jpg">
-                            <p>Home</p> 
+                            <p class="margin1">Home</p> 
                         </div>
-                        <div class="image-nested1">
+                        <div class="image-nesteda">
                             <img src="image3.2.jpg">
-                            <p>Kitchen</p>
+                            <p class="margin1">Kitchen</p>
+                            <p id="see-more">See more</p>
                         </div>
-                        <div class="image-nested2">
+                        <div class="image-nestedb">
                             <img src="image3.3.jpg">
-                            <p>Health and Beauty</p>
+                            <p class="margin1">Health and Beauty</p>
                         </div>
-                        <p id="see-more">See more</p>
                     </div>
             </div>
             <div class="image-select">
@@ -298,22 +298,22 @@
             </div>
             <div class="image-select space">
                 <h2>Shop deals in fashion</h2>
-                <div class="image-nested-image">
-                    <div class="image-nested1">
+                <div class="image-nested-imagea">
+                    <div class="image-nesteda">
                         <img src="image4.jpg">
-                         <p>Jeans under $50</p>
+                         <p class="margin2">Jeans under $50</p>
                     </div>
-                    <div class="image-nested2">
+                    <div class="image-nestedb">
                         <img src="image4.1.jpg">
-                         <p>Tops under 25</p> 
+                         <p class="margin2">Tops under 25</p> 
                     </div>
-                    <div class="image-nested1">
+                    <div class="image-nesteda">
                         <img src="image4.2.jpg">
-                         <p>Dresses under $39</p>
+                         <p class="margin2">Dresses under $39</p>
                      </div>
-                    <div class="image-nested2">
+                    <div class="image-nestedb">
                          <img src="image4.3.jpg">
-                        <p>Shoes under $50</p>
+                        <p class="margin2">Shoes under $50</p>
                       </div>
                       <p id="see-more">See all deals</p>
                 </div>
@@ -548,8 +548,9 @@
                     <div class="image-nested-image">
                             <div class="nextdiv-image1">
                                 <img src="nextimage2.jpg">
+                                <p id="see-more3">Shop now</p>
                             </div> 
-                            <p id="see-more3">Shop now</p>
+                           
                     </div>
                 </div>
                 <div class="nextdiv">
@@ -567,12 +568,13 @@
                             <div class="image-nested1">
                                 <img src="nextimage3.3.jpg" >
                                 <p>Action figures</p>
+                                <p id="see-more">See more</p>
                             </div>
                             <div class="image-nested2">
                                 <img src="nextimage3.4.jpg" >
                                 <p>Mug</p>
                             </div>
-                            <p id="see-more">See more</p>
+                            
                         </div>
                     </div>
                 </div>
@@ -853,7 +855,7 @@
                                 <p>Wreaths & garlands</p>
                             </div>
                             <div class="image-nested2">
-                                <img  src="new4.2.jpg"  >
+                                <img  src="new4.2.jpg" id="outdoor" >
                                 <p>Outdoor decor</p> 
                             </div>
                             <div class="image-nested1">
@@ -861,7 +863,7 @@
                                 <p>Pillows & throws</p>
                             </div>
                             <div class="image-nested2">
-                                <img src="new4.4.jpg" >
+                                <img src="new4.4.jpg" id="wall">
                                 <p>Wall art & mirrors</p>
                             </div>
                             <p id="see-more">Shop more fall finds</p>
