responsive through out

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon.com. Spend less. Smile more.</title>
     <link rel="icon" href="https://th.bing.com/th/id/OIP.nynNKCUJvawhpISc05BcswAAAA?w=175&h=196&c=7&r=0&o=5&pid=1.7"/>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media querys/hero.css">
+    <link rel="stylesheet" href="media querys/deals.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/7.2.1/css/flag-icons.min.css" integrity="sha512-bZBu2H0+FGFz/stDN/L0k8J0G8qVsAL0ht1qg5kTwtAheiXwiRKyCq1frwfbSFSJN3jooR5kauE0YjtPzhZtJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -212,10 +213,10 @@
         <div class="herosection">
             <div class="hero-images-container">
                 <div class="hero-images">
-                    <img src="/images/hero image.jpg" alt="">
+                    <img src="images/hero image.jpg" alt="">
                 </div>
                 <div class="hero-images">
-                    <img src="/images/hero image 2.jpg" alt="">
+                    <img src="images/hero image 2.jpg" alt="">
                 </div>
                 <div class="hero-images">
                     <img src="images/hero image 3.jpg" alt="">
@@ -227,7 +228,7 @@
                     <img src="images/hero image 5.jpg" alt="">
                 </div>
                 <div class="hero-images">
-                    <img src="/images/hero image 6.jpg" alt="">
+                    <img src="images/hero image 6.jpg" alt="">
                 </div>
                 <div class="hero-images">
                     <img src="images/hero image 7.jpg" alt="">
@@ -282,20 +283,20 @@
          <div class="image-select">
                     <h2>Refresh your space</h2>
                     <div class="image-nested-imagea">
-                        <div class="image-nesteda">
+                        <div class="image-nesteda imagea">
                              <img src="images/image3.jpg">
                              <p class="margin1">Dining</p>
                         </div>
-                        <div class="image-nestedb">
+                        <div class="image-nestedb imageb">
                              <img src="images/image3.1.jpg">
                             <p class="margin1">Home</p> 
                         </div>
-                        <div class="image-nesteda">
+                        <div class="image-nesteda imagea">
                             <img src="images/image3.2.jpg">
                             <p class="margin1">Kitchen</p>
                             <p id="see-more">See more</p>
                         </div>
-                        <div class="image-nestedb">
+                        <div class="image-nestedb imageb">
                             <img src="images/image3.3.jpg">
                             <p class="margin1">Health and Beauty</p>
                         </div>
@@ -328,19 +329,19 @@
             <div class="image-select space" id="image-select-five">
                 <h2>Shop deals in fashion</h2>
                 <div class="image-nested-imagea">
-                    <div class="image-nesteda">
+                    <div class="image-nesteda imagea">
                         <img src="images/image4.jpg">
                          <p class="margin2">Jeans under $50</p>
                     </div>
-                    <div class="image-nestedb">
+                    <div class="image-nestedb imageb">
                         <img src="images/image4.1.jpg">
                          <p class="margin2">Tops under 25</p> 
                     </div>
-                    <div class="image-nesteda">
+                    <div class="image-nesteda imagea">
                         <img src="images/image4.2.jpg">
                          <p class="margin2">Dresses under $39</p>
                      </div>
-                    <div class="image-nestedb">
+                    <div class="image-nestedb imageb">
                          <img src="images/image4.3.jpg">
                         <p class="margin2">Shoes under $50</p>
                     </div>
@@ -582,10 +583,10 @@ images/          <div class="games-container">
                            
                     </div>
                 </div>
-                <div class="nextdiv">
+                <div class="nextdiv" id="image-select-six">
                     <h2>Gaming merchandise</h2>
                     <div class="image-nested-image nextdiv1">
-                        <div class="image-nested-image">
+                        <div class="image-nested-image1">
                             <div class="image-nested1">
                                 <img src="images/nextimage3.1.jpg">
                                 <p>Apparels</p>
