--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 <div class="image-nested-imagea">
                     <div class="image-nesteda">
                         <img src="images/image1.jpg">
-                        <p class="margin1">Headsets</p>
+                        <p class="margin1" id="movetwo">Headsets</p>
                     </div>
                     <div class="image-nestedb">
                         <img  src="images/image1.1.jpg"  >
@@ -261,7 +261,7 @@
                     </div>
                     <div class="image-nesteda">
                         <img src="images/image1.2.jpg" >
-                        <p class="margin1">Computer mice</p>
+                        <p class="margin1" id="movetwo">Computer mice</p>
                         <a href="otherhtml/gamer.html"><p id="see-more">See more</p></a>
                     </div>
                     <div class="image-nestedb">
@@ -285,7 +285,7 @@
                     <div class="image-nested-imagea">
                         <div class="image-nesteda imagea">
                              <img src="images/image3.jpg">
-                             <p class="margin1">Dining</p>
+                             <p class="margin1" id="moveone">Dining</p>
                         </div>
                         <div class="image-nestedb imageb">
                              <img src="images/image3.1.jpg">
@@ -293,7 +293,7 @@
                         </div>
                         <div class="image-nesteda imagea">
                             <img src="images/image3.2.jpg">
-                            <p class="margin1">Kitchen</p>
+                            <p class="margin1" id="moveone">Kitchen</p>
                             <p id="see-more">See more</p>
                         </div>
                         <div class="image-nestedb imageb">
@@ -876,23 +876,23 @@ images/          <div class="games-container">
                                Shop personal computers</p>
                     </div>
                 </div>
-                <div class="nextdiv id">
+                <div class="nextdiv id" id="image-selectseven">
                     <h2>Warm & welcoming decor</h2>
                     <div class="image-nested-image nextdiv1">
-                        <div class="image-nested-image">
-                            <div class="image-nested1">
+                        <div class="image-nested-image1 ">
+                            <div class="image-nested1 nestedone">
                                 <img src="images/new4.1.jpg">
                                 <p>Wreaths & garlands</p>
                             </div>
-                            <div class="image-nested2">
+                            <div class="image-nested2 nestedtwo">
                                 <img  src="images/new4.2.jpg" id="outdoor" >
                                 <p>Outdoor decor</p> 
                             </div>
-                            <div class="image-nested1">
+                            <div class="image-nested1 nestedone">
                                 <img src="images/new4.3.jpg" >
                                 <p>Pillows & throws</p>
                             </div>
-                            <div class="image-nested2">
+                            <div class="image-nested2 nestedtwo">
                                 <img src="images/new4.4.jpg" id="wall">
                                 <p>Wall art & mirrors</p>
                             </div>
